--- a/config-prod.json
+++ b/config-prod.json
@@ -1,6 +1,6 @@
 {
-  "aws_region": "<app-aws-region>",
-  "bot_to_worker_queue_name": "<your-sqs-queue-name>",
-  "telegram_token_secret_name": "<your-telegram-token-name>",
-  "videos_bucket": "<your-s3-bucket-name>"
+  "aws_region": "us-west-2",
+  "bot_to_worker_queue_name": "lidoror-prod-queue",
+  "telegram_token_secret_name": "lidoror-k0s-prod-key",
+  "videos_bucket": "lidoror-prod-bucket"
 }
