--- a/infra/k8s/bot.yaml
+++ b/infra/k8s/bot.yaml
@@ -1,1 +1,33 @@
-# TODO implement the kubernetes manifest here
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: bot-deployment
+  labels:
+    app: bot
+    env: 
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: bot
+      env: 
+  template:
+    metadata:
+      labels:
+        app: bot
+        env: 
+    spec:
+      containers:
+      - name: bot
+        image: 
+        env:
+          - name: ENV
+            value: 
+        resources:
+          requests:
+            memory: "200Mi"
+            cpu: "200m"
+          limits:
+            memory: "200Mi"
+            cpu: "200m"
+        
