added script to deploy k0s

--- a/.gitignore
+++ b/.gitignore
@@ -153,4 +153,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+.DS_Store
+bot/.DS_Store
+infra/.DS_Store
+infra/jenkins/.DS_Store
 
