--- a/infra/k8s/bot.yaml
+++ b/infra/k8s/bot.yaml
@@ -4,25 +4,30 @@ metadata:
   name: bot-deployment
   labels:
     app: bot
-    env: 
+    env:
 spec:
   replicas: 2
   selector:
     matchLabels:
       app: bot
-      env: 
+      env:
+  strategy:
+    rollingUpdate:
+      maxSurge: 50%
+      maxUnavailable: 50%
+    type: RollingUpdate
   template:
     metadata:
       labels:
         app: bot
-        env: 
+        env:
     spec:
       containers:
       - name: bot
-        image: 
+        image:
         env:
           - name: ENV
-            value: 
+            value:
         resources:
           requests:
             memory: "200Mi"
@@ -30,4 +35,3 @@ spec:
           limits:
             memory: "200Mi"
             cpu: "200m"
-        
