--- a/infra/k8s/worker.yaml
+++ b/infra/k8s/worker.yaml
@@ -10,7 +10,12 @@ spec:
   selector:
     matchLabels:
       app: worker
-      env: 
+      env:
+  strategy:
+    rollingUpdate:
+      maxSurge: 50%
+      maxUnavailable: 50%
+    type: RollingUpdate
   template:
     metadata:
       labels:
